<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_sky_blue"
    tools:context=".Setting.Help_Center_Activity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >




<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/light_sky_blue">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_200_dsa"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/dark_red">



        <TextView
            android:id="@+id/text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginHorizontal="@dimen/dp_10_dsa"
            android:layout_marginTop="@dimen/dp_30_dsa"
            android:padding="@dimen/dp_5_dsa"
            android:text="@string/please_fill_out_the_form_below_and_we_will_get"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_19_dsa"
            app:layout_constraintTop_toTopOf="@id/constraint_layout"
            app:layout_constraintStart_toStartOf="@id/constraint_layout"
            app:layout_constraintEnd_toEndOf="@id/constraint_layout"
            />

        <TextView
            android:id="@+id/text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginHorizontal="@dimen/dp_10_dsa"
            android:padding="@dimen/dp_5_dsa"
            android:text="@string/back_to_you_as_soon_as_possible"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_19_dsa"
            app:layout_constraintTop_toBottomOf="@id/text1"
            app:layout_constraintStart_toStartOf="@id/constraint_layout"
            app:layout_constraintEnd_toEndOf="@id/constraint_layout"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:cardElevation="@dimen/dp_4_dsa"
        app:cardCornerRadius="@dimen/dp_10_dsa"
        android:layout_marginHorizontal="@dimen/dp_10_dsa"
        app:layout_constraintTop_toBottomOf="@id/constraint_layout"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/constraint_layout"
        app:layout_constraintEnd_toEndOf="@id/constraint_layout"
        android:layout_marginTop="@dimen/dp_60_minus_dsa"
        >

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="@dimen/dp_20_dsa"
          android:orientation="vertical">

          <com.google.android.material.textfield.TextInputLayout
              android:layout_width="match_parent"
              android:layout_height="@dimen/dp_58_dsa"
              android:background="@drawable/edit_text_bg"
              app:boxBackgroundMode="outline"
              app:hintTextColor="@color/light_gray">

              <EditText
                  android:id="@+id/name"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:autofillHints=""
                  android:background="@android:color/transparent"
                  android:drawablePadding="@dimen/dp_10_dsa"
                  android:fontFamily="@font/ubuntu_medium"
                  android:hint="@string/name"
                  android:inputType="textPersonName"
                  android:padding="@dimen/dp_10_dsa"
                  android:singleLine="true"
                  android:textColor="@color/main_textColor"
                  android:textColorHint="#202020"
                  android:textSize="@dimen/sp_18_dsa"
                  android:textStyle="bold" />
          </com.google.android.material.textfield.TextInputLayout>

          <com.google.android.material.textfield.TextInputLayout
              android:layout_width="match_parent"
              android:layout_height="@dimen/dp_58_dsa"
              android:background="@drawable/edit_text_bg"
              app:boxBackgroundMode="outline"
              android:layout_marginTop="@dimen/dp_20_dsa"
              app:hintTextColor="@color/light_gray">

              <EditText
                  android:id="@+id/email"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:autofillHints=""
                  android:background="@android:color/transparent"
                  android:drawablePadding="@dimen/dp_10_dsa"
                  android:fontFamily="@font/ubuntu_medium"
                  android:hint="@string/email"
                  android:inputType="textEmailAddress"
                  android:padding="@dimen/dp_10_dsa"
                  android:singleLine="true"
                  android:textColor="@color/main_textColor"
                  android:textColorHint="#202020"
                  android:textSize="@dimen/sp_18_dsa"
                  android:textStyle="bold"
                   />
          </com.google.android.material.textfield.TextInputLayout>


          <com.google.android.material.textfield.TextInputLayout
              android:layout_width="match_parent"
              android:layout_height="@dimen/dp_180_dsa"
              android:background="@drawable/edit_text_bg"
              app:boxBackgroundMode="outline"
              android:layout_marginTop="@dimen/dp_20_dsa"
              app:hintTextColor="@color/light_gray">

              <EditText
                  android:id="@+id/message"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:layout_marginTop="@dimen/dp_15_dsa"
                  android:autofillHints=""
                  android:background="@android:color/transparent"
                  android:elevation="@dimen/dp_8_dsa"
                  android:fontFamily="@font/ubuntu_medium"
                  android:gravity="top|start"
                  android:hint="@string/message"
                  android:inputType="textAutoCorrect|textMultiLine"
                  android:padding="@dimen/dp_10_dsa"
                  android:textColor="@color/main_textColor"
                  android:textSize="@dimen/sp_18_dsa"
                  android:textStyle="bold" />
          </com.google.android.material.textfield.TextInputLayout>

          <com.google.android.material.button.MaterialButton
              android:id="@+id/btn_submit"
              android:layout_width="@dimen/dp_200_dsa"
              android:layout_height="wrap_content"
              android:layout_gravity="center_horizontal"
              android:layout_marginTop="@dimen/dp_24_dsa"
              android:background="@drawable/send_btn_bg"
              android:gravity="center_horizontal|center_vertical"
              android:text="Submit"
              android:textAllCaps="false"
              android:textSize="@dimen/sp_18_dsa"
              app:icon="@drawable/ic_send"
              app:iconGravity="textStart" />


      </LinearLayout>


    </com.google.android.material.card.MaterialCardView>



</androidx.constraintlayout.widget.ConstraintLayout>




    </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

